--- a/en/html/libs/io/dotmat.html
+++ b/en/html/libs/io/dotmat.html
@@ -86,7 +86,7 @@
         <div class="attliste">
           <dl>
             <dt class="lib">
-              Input Format (read-only after component is created)
+              Input Format
             </dt>
             <dd>
               Selects how the pins correspond to pixels, as outlined above.
@@ -102,6 +102,12 @@
             </dt>
             <dd>
               Selects how many rows are in the matrix, which may range from 1 up to 32.
+            </dd>
+			<dt class="lib">
+              Select Location
+            </dt>
+            <dd>
+              
             </dd>
             <dt class="lib">
               On Color
@@ -127,6 +133,30 @@
             <dd>
               The square option means that each pixel is drawn as a 10x10 square, filling the component with no gaps between pixels. The circle option means that each pixel is drawn as a diameter-8 circle, with gaps between each circle. The circle option is more difficult to interpret, but it more closely approximates the off-the-shelf LED matrix components.
             </dd>
+			<dt class="lib">
+            <b class="property">Label</b>
+          </dt>
+          <dd>
+            The text within the label associated with the component.
+          </dd>
+          <dt class="lib">
+            <b class="property">Label Location</b>
+          </dt>
+          <dd>
+            The location of the label relative to the component.
+          </dd>
+          <dt class="lib">
+            <b class="property">Label Font</b>
+          </dt>
+          <dd>
+            The font with which to render the label.
+          </dd>
+          <dt class="lib">
+            <b class="property">Label visible</b>
+          </dt>
+          <dd>
+            Display or not the label.
+          </dd>
           </dl>
         </div>
         <h2>
