--- a/en/html/libs/io/joystick.html
+++ b/en/html/libs/io/joystick.html
@@ -113,7 +113,7 @@
         Text Tool Behavior
       </h2>
       <p>
-        Allows the label associated with the component to be edited.
+        None.
       </p>
       <p>
         <b>Back to</b> <a href="../index.html">Library Reference</a>
