--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   <a href="./libstatus.html">Library libs Status</a><br>
 </h2>
 <a href="./en/html/libs/index.html">Library Reference EN</a><br><br>
-<a href="./fr/html/libs/index.html">Library Reference FR Référence de la bibliothèque</a><br><br>
-<a href="./de/html/libs/index.html">Library Reference DE Bibliotheksreferenz</a><br><br>
-<a href="./pt/html/libs/index.html">Library Reference PT Referências para bibliotecas</a><br><br>
-<a href="./ru/html/libs/index.html">Library Reference RU Library Reference RU</a><br><br>
-<a href="./he/html/libs/index.html">Library Reference HE </a><br><br>
+<a href="./fr/html/libs/index.html">Library Reference FR  Référence de la bibliothèque</a><br><br>
+<a href="./de/html/libs/index.html">Library Reference DE  Bibliotheksreferenz</a><br><br>
+<a href="./pt/html/libs/index.html">Library Reference PT  Referências para bibliotecas</a><br><br>
+<a href="./ru/html/libs/index.html">Library Reference RU  Library Reference RU</a><br><br>
+<a href="./he/html/libs/index.html">Library Reference HE  הפניה לספרייה </a><br><br>
 <h2>
   Documentation resources
 </h2>
