--- a/libstatus.html
+++ b/libstatus.html
@@ -1112,12 +1112,12 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good" >3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">7-Segment Display</td>
 		<td align="left"></td>
-		<td align="center" class="needtask"><a href="./en/html/libs/io/7seg.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/io/7seg.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./fr/html/libs/io/7seg.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/7seg.html">__</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/libs/io/7seg.html">__</a></td>
@@ -1129,12 +1129,12 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good" >3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Hex Digit Display</td>
 		<td align="left"></td>
-		<td align="center" class="needtask"><a href="./en/html/libs/io/hexdig.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/io/hexdig.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./fr/html/libs/io/hexdig.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/hexdig.html">__</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/libs/io/hexdig.html">__</a></td>
@@ -1146,12 +1146,12 @@
 		<td align="center"></td>
 	</tr>
 		<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good" >3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">LED Matrix</td>
 		<td align="left"></td>
-		<td align="center" class="needtask"><a href="./en/html/libs/io/dotmat.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/io/dotmat.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./fr/html/libs/io/dotmat.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/dotmat.html">__</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/libs/io/dotmat.html">__</a></td>
@@ -1163,12 +1163,12 @@
 		<td align="center"></td>
 	</tr>
 		<tr>
-		<td height="17" align="center"></td>
+		<td height="17" class="good" >3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">TTY</td>
 		<td align="left"></td>
-		<td align="center" class="needtask"><a href="./en/html/libs/io/tty.html">__</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/io/tty.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./fr/html/libs/io/tty.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/tty.html">__</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/libs/io/tty.html">__</a></td>
@@ -1180,17 +1180,17 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center"></td>
+		<td height="17" align="center">3.2</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Port I/O</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/io/ioport.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/io/ioport.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/libs/io/ioport.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./pt/html/libs/io/ioport.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./ru/html/libs/io/ioport.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./he/html/libs/io/ioport.html">__</a></td>
+		<td align="center" class="needtask"><a href="./en/html/libs/io/portio.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./fr/html/libs/io/portio.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./de/html/libs/io/portio.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./pt/html/libs/io/portio.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./ru/html/libs/io/portio.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./he/html/libs/io/portio.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -1202,7 +1202,7 @@
 		<td align="left"></td>
 		<td align="left">Reptar Local Bus</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/io/replocbus.html">__</a></td>
+		<td align="center" class="needtask"><a href="./en/html/libs/io/replocbus.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./fr/html/libs/io/replocbus.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/replocbus.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/io/replocbus.html">__</a></td>
@@ -1219,12 +1219,12 @@
 		<td align="left"></td>
 		<td align="left">Video RVB</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/io/vidrvb.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./fr/html/libs/io/vidrvb.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/libs/io/vidrvb.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./pt/html/libs/io/vidrvb.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./ru/html/libs/io/vidrvb.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./he/html/libs/io/vidrvb.html">__</a></td>
+		<td align="center" class="needtask"><a href="./en/html/libs/io/rgbvideo.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./fr/html/libs/io/rgbvideo.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./de/html/libs/io/rgbvideo.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./pt/html/libs/io/rgbvideo.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./ru/html/libs/io/rgbvideo.html">__</a></td>
+		<td align="center" class="nonexist"><a href="./he/html/libs/io/rgbvideo.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
