--- a/en/html/guide/verify/test.html
+++ b/en/html/guide/verify/test.html
@@ -20,7 +20,7 @@
         From the Test Vector Window you can load a test vector from a file, and Logisim will start running tests on the current circuit. is only one test vector window for the project, and the table will change to reflect whichever circuit is being simulated in the project window. Note, however, that the Test Vector module runs a separate copy of the circuit simulator, and so does not interfere with, and is not influenced by, the simulation in the project window.
       </p>
       <p>
-        For the example we will test the circuit below. This circuit gives the results of five logical functions from two inputs. It has an error the bottom NAND gate should be an AND gate.
+        For the example we will test the circuit below. This circuit gives the results of five logical functions from two inputs. It has an error because the bottom NAND gate should be an AND gate.
       </p>
       <p align="center">
         <img class=notscal src="../../../../img-guide/vector-test.png" alt="#########">
