--- a/libstatus.html
+++ b/libstatus.html
@@ -88,7 +88,7 @@
 		<td align="center" class="needtask"><a href="./de/html/libs/index.html">_C</a></td>
 		<td align="center" class="needtask"><a href="./pt/html/libs/index.html">_C</a></td>
 		<td align="center" class="needtask"><a href="./ru/html/libs/index.html">_C</a></td>
-		<td align="center" class="notverif"><a href="./he/html/libs/index.html">__</a></td>
+		<td align="center" class="needtask"><a href="./he/html/libs/index.html">_C</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -101,10 +101,10 @@
 		<td align="left"></td>
 		<td align="center" class="good"><a href="./en/html/libs/wiring/index.html">__</a></td>
 		<td align="center" class="good"><a href="./fr/html/libs/wiring/index.html">__</a></td>
-		<td align="center" class="nonexist"><a href="./de/html/libs/wiring/index.html">__</a></td>
+		<td align="center" class="needtask"><a href="./de/html/libs/wiring/index.html">_C</a></td>
 		<td align="center" class="good"><a href="./pt/html/libs/wiring/index.html">_V</a></td>
 		<td align="center" class="good"><a href="./ru/html/libs/wiring/index.html">_V</a></td>
-		<td align="center" class="notverif"><a href="./he/html/libs/wiring/index.html">__</a></td>
+		<td align="center" class="good"><a href="./he/html/libs/wiring/index.html">__</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -443,7 +443,7 @@
 		<td align="center" class="nonexist"><a href="./de/html/libs/gates/pla.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/gates/pla.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./ru/html/libs/gates/pla.html">__</a></td>
-		<td align="center" class="notverif"><a href="./he/html/libs/gates/pla.html">__</a></td>
+		<td align="center" class="needtask"><a href="./he/html/libs/gates/pla.html">_C</a></td>
 		<td align="center"></td>
 		<td align="center"></td>
 		<td align="center"></td>
@@ -1112,12 +1112,12 @@
 		<td align="center"></td>
 	</tr>
     <tr>
-		<td height="17" class="" >3.9</td>
+		<td height="17"  class="good" class="" >3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
-		<td align="left">LED RGB</td>
+		<td align="left">LED BAR</td>
 		<td align="left"></td>
-		<td align="center" class="nonexist"><a href="./en/html/libs/io/ledbar.html">_V</a></td>
+		<td align="center" class="good"><a href="./en/html/libs/io/ledbar.html">_V</a></td>
 		<td align="center" class="nonexist"><a href="./fr/html/libs/io/ledbar.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/ledbar.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/io/ledbar.html">__</a></td>
@@ -1197,12 +1197,12 @@
 		<td align="center"></td>
 	</tr>
 	<tr>
-		<td height="17" align="center">3.2</td>
+		<td height="17" align="center">3.9</td>
 		<td align="left"></td>
 		<td align="left"></td>
 		<td align="left">Port I/O</td>
 		<td align="left"></td>
-		<td align="center" class="needtask"><a href="./en/html/libs/io/portio.html">__</a></td>
+		<td align="center" class="needtask"><a href="./en/html/libs/io/portio.html">_C</a></td>
 		<td align="center" class="nonexist"><a href="./fr/html/libs/io/portio.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./de/html/libs/io/portio.html">__</a></td>
 		<td align="center" class="nonexist"><a href="./pt/html/libs/io/portio.html">__</a></td>
